@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.97.00
 
+              pamtogif: Fix bug: doesn't ignore the input alpha mask when user
+              specified -transparent.
+
 21.09.25 BJH  Release 10.96.00
 
               pgmtoppm: Eliminate dependency on color dictionary when user
